--- a/index.html
+++ b/index.html
@@ -1,8 +1,29 @@
----
-layout: default
-title: Hank Quinlan, Horrible Cop
----
-<div class="blurb">
-	<h1>Hi there, I'm Hank Quinlan!</h1>
-	<p>I'm an aspiring, self-taught developer from <em>Manila, Philippines</em>. <a href="/about">Read more about my life...</a></p>
-</div><!-- /.blurb -->
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>tbor website</title>
+		<!-- link to main stylesheet -->
+		<link rel="stylesheet" type="text/css" href="/css/main.css">
+	</head>
+	<body>
+		<nav>
+    		<ul>
+        		<li><a href="/">Home</a></li>
+	        	<li><a href="/about">About</a></li>
+        		<li><a href="/blog">Blog</a></li>
+    		</ul>
+		</nav>
+		<div class="container">
+    		<div class="blurb">
+        		<h1>Hi there, I'm tbor!</h1>
+				<p>I'm an aspiring, self-taught developer from <em>Manila, Philippines</em>. <a href="/about">Read more about my life...</a></p>
+    		</div><!-- /.blurb -->
+		</div><!-- /.container -->
+		<footer>
+    		<ul>
+        		<li><a href="mailto:tbor1277@gmail.com">email</a></li>
+        		<li><a href="https://github.com/tbor1277">github.com/tbor1277</a></li>
+			</ul>
+		</footer>
+	</body>
+</html>
