--- a/about.html
+++ b/about.html
@@ -15,8 +15,8 @@
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1>MOre About Me</h1>
-				<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Insert more text here. Need more text. This is still in development so don't expect to read more. </p>
+        		<h1>More About Me</h1>
+				<p>I'm best known as the horrible cop from <em>A Touch of Evil.</em> Insert more text here. Need more text. This is still in development so don't expect to read more. </p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
