--- a/about.html
+++ b/about.html
@@ -21,8 +21,8 @@
 		</div><!-- /.container -->
 		<footer>
     		<ul>
-        		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
-        		<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
+        		<li><a href="tbor1277@gmail.com">email</a></li>
+        		<li><a href="https://github.com/tbor1277">github.com/tbor1277</a></li>
 			</ul>
 		</footer>
 	</body>
